feat: improve ai assistant widget | sas

--- a/src/ai-assistant-widget/index.html
+++ b/src/ai-assistant-widget/index.html
@@ -298,7 +298,7 @@
         </div>
       </div>
       <div class="ai-footer">
-        <form class="ai-form" action="#">
+        <form class="ai-form" action="#template-chat">
           <p-button-pure icon="attachment" hide-label="true">Upload attachment</p-button-pure>
           <textarea class="ai-input" name="question" rows="1" placeholder="Message AI Assistant"></textarea>
           <p-button-pure icon="microphone" hide-label="true">Use microphone</p-button-pure>
@@ -315,7 +315,7 @@
 
   <template id="template-my-inquiries">
     <div class="ai-header">
-      <p-link href="#template-intro" icon="arrow-left" hide-label="true" variant="ghost" compact="true">Back</p-link>
+      <p-link href="javascript:history.back()" icon="arrow-left" hide-label="true" variant="ghost" compact="true">Back</p-link>
       <p-link href="#template-intro" variant="ghost" compact="true" hide-label="true" icon="new-chat">Start new chat</p-link>
     </div>
     <div class="my-static-xl mx-static-lg grid gap-sm z-0">
@@ -331,7 +331,7 @@
 
   <template id="template-contact">
     <div class="ai-header">
-      <p-link href="#template-intro" icon="arrow-left" hide-label="true" variant="ghost" compact="true">Back</p-link>
+      <p-link href="javascript:history.back()" icon="arrow-left" hide-label="true" variant="ghost" compact="true">Back</p-link>
       <p-link href="#template-intro" variant="ghost" compact="true" hide-label="true" icon="new-chat">Start new chat</p-link>
     </div>
     <div class="my-static-xl mx-static-lg grid gap-sm z-0">
@@ -352,7 +352,7 @@
 
   <template id="template-terms-of-use">
     <div class="ai-header">
-      <p-link href="#template-intro" icon="arrow-left" hide-label="true" variant="ghost" compact="true">Back</p-link>
+      <p-link href="javascript:history.back()" icon="arrow-left" hide-label="true" variant="ghost" compact="true">Back</p-link>
       <p-link href="#template-intro" variant="ghost" compact="true" hide-label="true" icon="new-chat">Start new chat</p-link>
     </div>
     <div class="my-static-xl mx-static-lg grid gap-sm z-0">
