feat: improve ai assistant widget | sas

--- a/src/ai-assistant-widget/index.html
+++ b/src/ai-assistant-widget/index.html
@@ -51,7 +51,7 @@
       </div>
       <div class="ai-footer">
         <form class="ai-form" action="#template-chat">
-          <p-scroller class="col-span-full" gradient-color="background-surface" hidden>
+          <p-scroller class="col-span-full mt-[-4px]" gradient-color="background-surface" hidden>
             <div class="flex gap-static-sm">
               <p-tag icon="close" color="background-frosted">
                 <button type="button">911-datasheet.jpg</button>
@@ -318,7 +318,7 @@
       </div>
       <div class="ai-footer">
         <form class="ai-form" action="#template-chat">
-          <p-scroller class="col-span-full" gradient-color="background-surface" hidden>
+          <p-scroller class="col-span-full mt-[-4px]" gradient-color="background-surface" hidden>
             <div class="flex gap-static-sm">
               <p-tag icon="close" color="background-frosted">
                 <button type="button">911-datasheet.jpg</button>
